k8s/base/services/media/samba/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: samba
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: samba
  template:
    metadata:
      labels:
        app: samba
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - homeserver-2
      containers:
        - name: samba
          image: dperson/samba
          ports:
            - containerPort: 445
              protocol: TCP
            - containerPort: 139
              protocol: TCP
            - containerPort: 138
              protocol: UDP
            - containerPort: 137
              protocol: UDP
          volumeMounts:
            - name: media-data
              mountPath: /media
              readOnly: true
            - name: media-data
              mountPath: /media-rw
              subPath: stuff
            - name: samba-config
              mountPath: /config
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "200m"
      volumes:
        - name: media-data
          persistentVolumeClaim:
            claimName: media-data-hostpath
        - name: samba-config
          configMap:
            name: samba-config
