k8s/base/services/media/samba/service.yml
apiVersion: v1
kind: Service
metadata:
  name: samba
  namespace: media
spec:
  selector:
    app: samba
  ports:
    - name: smb
      port: 445
      targetPort: 445
      protocol: TCP
    - name: netbios
      port: 139
      targetPort: 139
      protocol: TCP
    - name: netbios-ns
      port: 137
      targetPort: 137
      protocol: UDP
    - name: netbios-dgm
      port: 138
      targetPort: 138
      protocol: UDP
  type: ClusterIP
