k8s/base/services/media/samba/ingressroute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: samba
  namespace: media
spec:
  entryPoints:
    - smb
  routes:
  - match: HostSNI(`*`)
    services:
    - name: samba
      port: 445
